[tool.poetry]
name = "my-blog"
version = "0.1.0"
description = ""
authors = ["Barskyi <barskyi69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
python-decouple = "^3.8"
django-taggit = "^6.1.0"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
